feat: search and filter by category, change app name

--- a/detail.html
+++ b/detail.html
@@ -7,68 +7,16 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Workout Detail</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link rel="stylesheet" href="/src/css/app.css" />
-    <link rel="stylesheet" href="/src/css/feed.css" />
+
     <link rel="manifest" href="/manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="PWAGram" />
-    <link
-      rel="apple-touch-icon"
-      href="/src/images/icons/apple-icon-57x57.png"
-      sizes="57x57"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="/src/images/icons/apple-icon-60x60.png"
-      sizes="60x60"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="/src/images/icons/apple-icon-72x72.png"
-      sizes="72x72"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="/src/images/icons/apple-icon-76x76.png"
-      sizes="76x76"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="/src/images/icons/apple-icon-114x114.png"
-      sizes="114x114"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="/src/images/icons/apple-icon-120x120.png"
-      sizes="120x120"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="/src/images/icons/apple-icon-144x144.png"
-      sizes="144x144"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="/src/images/icons/apple-icon-152x152.png"
-      sizes="152x152"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="/src/images/icons/apple-icon-180x180.png"
-      sizes="180x180"
-    />
+    <meta name="apple-mobile-web-app-title" content="FitFlow" />
     <meta
       name="msapplication-TileImage"
       content="/src/images/icons/app-icon-144x144.png"
     />
-    <meta name="msapplication-TileColor" content="#fff" />
-    <meta name="theme-color" content="#3f51b5" />
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -98,10 +46,11 @@
 
   <body>
     <div id="app">
+      <!-- Navbar -->
       <header>
         <nav class="navbar bg-base-100 fixed top-0 z-[10]">
           <div class="w-full flex justify-center items-center">
-            <a class="btn btn-ghost text-xl" href="/">GymBros</a>
+            <a class="btn btn-ghost text-xl" href="/">FitFlow</a>
           </div>
         </nav>
       </header>
@@ -167,7 +116,7 @@
               <p id="equipment">No equipment needed</p>
             </div>
 
-            <div id="description" class="mt-5 leading-loose">
+            <div id="description" class="mt-3 leading-loose">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet nulla non turpis fringilla venenatis. Pellentesque tempus, metus quis suscipit pharetra, velit eros euismod metus, in rutrum ipsum nisi sit amet lorem. Sed dapibus imperdiet purus eget semper. Donec cursus id neque nec ultricies. Nullam tortor elit, maximus ut nisl ut, vehicula malesuada nibh. Praesent ac mattis libero. Nullam vel nunc molestie, pretium dolor sed, convallis tortor. Etiam fringilla arcu ac purus feugiat molestie.Integer bibendum ornare lectus ut scelerisque. Aliquam viverra suscipit mauris id commodo. Fusce eu augue pharetra augue placerat accumsan et sodales metus. Cras aliquam purus eros, ut fermentum nisl rhoncus a. Donec auctor lacinia pharetra. Sed consectetur imperdiet odio a scelerisque. Integer augue lacus, tempor vestibulum consequat ac, efficitur vel leo. Proin vitae elementum metus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam ex sem, ullamcorper eget congue id, faucibus tincidunt nulla.
             </div>
           </div>
